// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid  /> Debe de mostrar el componente correctamente  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn animate__delay-0.8s"
  >
     
    Goku
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Cargando...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas en <GifGrid  /> debe de mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn animate__delay-0.8s"
  >
     
    Goku
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Hola que tal"
      url="https://localhost/cualquiercosa/cosa.jpg"
    />
  </div>
</Fragment>
`;
